css/mobile.css
.mobile_site {
    border-top: solid #FFFFFF .25em;
    border-right: solid #FFFFFF .25em;
    border-bottom: solid #FFFFFF .25em;
    border-left: solid #FFFFFF .25em;
}
.mobile_header {
    border-top: solid #FFFFFF .25em;
    background-clip: content-box !important;

}

.mobile_sub {
    border-top: solid #DCDCDC .125em;
    border-right: none;
    border-bottom: solid #DCDCDC .125em;
    border-left: none;
}

.mobile_sub_l3 {
    border-top: solid #DCDCDC .125em;
    border-right: solid #DCDCDC .125em;
    border-bottom: solid #DCDCDC .125em;
    border-left: solid #DCDCDC .125em;
}


.keys_mob h1,
.datasets_mob h1,
.sdks_mob h1,
.beg_mob h1,
.highlight_mob h1,
.highlight_mob h2,
.app_mob h1,
.app_mob h2

{

    font-family: 'Open Sans', sans-serif;
    text-align: center;
    color: white;
    text-transform: uppercase;
    font-size: medium;
    font-weight: normal;
}

.beg_mob h2 {
    color: black;
    text-transform: none;
    font-size: medium;
    font-weight: normal;
    text-align: center;
}

.highlight_mob h1,
.highlight_mob h2,
.app_mob h1,
.app_mob h2 {
    text-align: left;
}

.app_mob {
    background: #7D7E80;
}

.keys_mob {
    background: #732123;
    text-align: center;
}
.datasets_mob {
    background: #7B3B77;
    text-align: center;
    
}
.datasets_mob h1 {
    font-family: 'Open Sans', sans-serif;
    text-align: center;
    color: white;
    text-transform: uppercase;
    font-size: medium;
    font-weight: normal;
}


.healthsafe_mob {
    font-family: 'Open Sans', sans-serif;
    text-align: left;
    color: white;
}

.healthsafe_mob h2 {
    font-family: 'Open Sans', sans-serif;
    text-align: left;
    color: white;
    font-size: medium;
}

.sdks_mob {
    background: #2D3E50;
    text-align: center;
    
}

.highlight_mob {
    background: #434343;
}

.highlight_mob p,
.app_mob p {
    font-size: small;
    color: white;
}

.pad_mob {
    padding: .5em;
}

.no-margin {
    margin-left: 0;
}

.health_background {
    background-color: #994140;
    
}

.keep_background {
    background-color: #77AF42;

}

.expand_background {
    background-color: #48869F;
}

.others_background {
    background-color: #8D5095;
}

.dataset_mob_head h1 {
    font-family: 'Open Sans', sans-serif;
    text-align: left;
    color: white;
    text-transform: uppercase;
    font-size: large;
}

.datasets_back h1
{
    font-size: large;
    color: white;
    font-weight: bold;
    text-align: center;
}

.force_wrap {
    word-wrap: break-word;
    -ms-word-break: break-all;

    /* Be VERY careful with this, breaks normal words wh_erever 
    word-break: break-all;*/

    /* Non standard for webkit */
    word-break: break-word;

    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    hyphens: auto;
}

.apiurl p {
    font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
    border-style: solid;
    border-width: thin;
    font-weight: bold;
    background-color: #e1e1e1;
    padding: 0 .5em;
    margin-top: .25em;
    margin-bottom: .25 em;
}

.content ul  {
    list-style-type: none
}

